--- a/css/style.css
+++ b/css/style.css
@@ -455,3 +455,55 @@ ul {
 .ocultar {
     transform: translateY(100%); /* Mover el div hacia abajo */
 }
+@media screen and (min-width: 1600px) {
+    .boton2{
+        font-size: 25px;
+    }
+    .salir{
+        font-size: 25px;
+        margin-top: 1%;
+    }
+}
+@media screen and (min-width: 1900px) {
+    .boton2{
+        font-size: 30px;
+    }
+    .salir{
+        font-size: 30px;
+        margin-top: 1.5%;
+    }
+    .logo{
+        width: 280px;
+    }
+    li{
+        font-size: 25px;
+    }
+    .tn{
+        font-size: 25px;
+    }
+    h1{
+        font-size: 60px;
+    }
+    .h1R{
+        font-size: 45px;
+    }
+    .campo-busqueda{
+        width: 1000px;
+        height: 70px;
+        font-size: 25px;
+    }
+    .botonL{
+        font-size: 25px;
+        margin-right: 4px;
+    }
+    .mi-select {
+        margin-left: 10px;
+        padding: 15px;
+        font-size: 25px;
+        width: 250px;
+    }
+    .lupa{
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+}
