--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,15 @@ input[type="text"],
     box-sizing: border-box;
 }
 
-input[type="number"],
-[type="password"] {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
+.button1 {
+    background-color: #00be6f;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: none;
     border-radius: 4px;
-    box-sizing: border-box;
+    cursor: pointer;
+    width: 100%;
 }
 
 .modal {
@@ -60,28 +61,6 @@ input[type="number"],
     border: 1px solid #888;
     width: 50%;
     border-radius: 5px;
-}
-
-input[type="text"],
-[type="password"] {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    /* Para que el ancho incluya el padding y el borde */
-}
-
-.button1 {
-    background-color: #00be6f;
-    color: white;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
 }
 
 .button1:hover {
@@ -505,5 +484,27 @@ ul {
     .lupa{
         margin-top: 30px;
         margin-bottom: 30px;
+    }
+    .h2M{
+        font-size: 40px;
+    }
+    form {
+        padding: 40px;
+        width: 400px;
+    }
+    .labelL{
+        font-size: 25px;
+    }
+    input[type="text"],
+    [type="password"] {
+        height: 40px;
+    }
+
+    .button1 {
+        height: 40px;
+        font-size: 16px;
+    }
+    .boton{
+        font-size: 25px;
     }
 }
