--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ ul {
     overflow-y: auto;
     padding: 30px;
     position: fixed;
-    background-color: whitesmoke;
+    background-color: #edeaea;
     z-index: 1;
     top: 0px;
     left: 0px!important;
