--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ input[type="text"],
 }
 
 .body2 {
-    background-image: url(../img/fondo.png);
+    /* background-image: url(../img/fondo.png); */
     height: 100vh;
     margin: 0;
     /* zoom: 0.8; */
@@ -184,6 +184,7 @@ img {
     border-bottom: solid green 3px;
     position: fixed;
     width: 100%;
+    z-index: 2;
 }
 
 .cuerpo {
@@ -224,6 +225,13 @@ h1 {
 .contenedor1 {
     display: flex;
     flex-basis: 100%;
+}
+
+.numeroR{
+    color: #00be6f;
+    font-weight: bold;
+    font-size: 100%;
+    margin-top: 3%;
 }
 
 .restaurante {
@@ -401,7 +409,7 @@ ul {
     right: 0px!important;
     height: 100%;
     width: 97%;
-    /* display: none; */
+    display: none;
     padding-right: 0px!important;
     margin-right: 0.5%;
     margin-left: 0.5%;
@@ -483,9 +491,14 @@ ul {
 }
 
 .estrella_foto {
-    max-width: 200px;
-    height: 45px;
-    width: 100% !important;
+    /* max-width: 200px;
+    height: 7%; */
+    width: 100px !important;
+}
+
+.valoraciones{
+    display: flex; align-items:center;
+    gap: 10%;
 }
 
 .wrapper i {
@@ -507,18 +520,18 @@ ul {
     transform: translateY(-50%) scale(0.85);
 }
 .wrapper i:first-child{
-    left: -22px;
+    left: 0px;
 }
 .wrapper i:last-child{
-    right: -22px;
+    right: 22px;
 }
 .wrapper .carousel{
     display: grid;
     grid-auto-flow: column;
-    grid-auto-columns: calc((100% / 3) - 12px);
+    grid-auto-columns: calc((100% / 4) - 12px);
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    gap: 16px;
+    /* gap: -20px; */
     border-radius: 8px;
     scroll-behavior: smooth;
     scrollbar-width: none;
@@ -546,41 +559,54 @@ ul {
     scroll-snap-align: start;
     height: 342px;
     list-style: none;
-    background: #fff;
     cursor: pointer;
-    padding-bottom: 15px;
+    padding-bottom: 0px;
     flex-direction: column;
     border-radius: 8px;
+    width: 240px;
+    align-items: first baseline;
 }
 .carousel .card .img {
     background: #8B53FF;
     height: 148px;
-    width: 148px;
-    border-radius: 50%;
+    width: 240px;
+    margin-top: 10%;
+    border-radius: 5px;
 }
 .card .img img {
-    width: 200px;
-    height: 200px;
+    width: 240px;
+    height: 240px;
+    border-radius: 5px;
     /* border-radius: 50%; */
     /* object-fit: cover;
     border: 4px solid #fff; */
 }
-.carousel .card h2 {
+.carousel .card label {
+    font-weight: bold;
+    margin-right: 100px;
     font-weight: 500;
-    font-size: 1.56rem;
-    margin: 30px 0 5px;
+    font-size: 15px;
+    /* margin: 50px 0 5px;*/
+    margin-top: 50px;
+    /* margin-left: -125px; */
 }
 .carousel .card span {
-    color: #6A6D78;
-    font-size: 1.31rem;
+    font-size: 12px;
+    font-weight: bold;
 }
-
 
 .star {
     font-size: 32px;
     color: #bbb;
     transition: color 0.3s;
     cursor: pointer;
+}
+
+.fondoTar{
+    padding-left: 6%;
+    background-color: white;
+    border-top: solid green 3px;
+    border-bottom: solid green 3px;
 }
 
 .star:hover,
