--- a/css/style.css
+++ b/css/style.css
@@ -649,6 +649,7 @@ ul {
     border-radius: 5px;
     border: solid black;
     width: 1076px;
+    margin-bottom: 2%;
 }
 
 .h1O {
@@ -857,4 +858,36 @@ ul {
 
 .reset {
     width: 30px;
+}
+
+.anuncio2 {
+    flex-direction: column;
+    justify-content: flex-end;
+    color: #fff;
+    background-image: url(../img/amar-barcelona.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    margin-left: 6%;
+    height: 600px;
+    border-radius: 20px;
+    border: 1px solid black;
+    width: 86.5%;
+    padding: 2%;
+    padding-bottom: 4%;
+}
+
+.botonV {
+    width: 14%;
+    padding: 10px 6px;
+    background-color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-left: 10px;
+    transition: background-color 0.5s ease;
+}
+
+.botonV:hover {
+    background-color: #00be6f;
 }
