--- a/css/style.css
+++ b/css/style.css
@@ -891,3 +891,20 @@ ul {
 .botonV:hover {
     background-color: #00be6f;
 }
+
+.review2 {
+    border: 2px solid transparent;
+    box-shadow: 0 0 0 2px #e0e0e0;
+    resize: none;
+    scrollbar-color: rgba(0, 0, 0, .6) transparent;
+    scrollbar-width: thin;
+    width: calc(96.5% - 4px);
+    margin-bottom: 1%;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    padding-left: 1%;
+    padding-top: 1%;
+    border-radius: 10px;
+    background-color: white;
+}
